--- a/TCGApp/appsettings.json
+++ b/TCGApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "TCGContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa599a_dveseli;User Id=db_aa599a_dveseli_admin;Password=28110RioN996"
+    "TCGContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa599a_dveseli;User Id=db_aa599a_dveseli_admin;Password=**********"
 
   },
   "AllowedHosts": "*"
